# grid-map-editor-py-qt

./: .gitignore  Keepout.pgm  OccupancyGridMapEditor.spec  README.md  main.py  pyproject.toml  requirements.txt  run.sh
controllers/: map_provider.py  project_manager.py  ros_manager.py  slam_mode_handler.py
docs/: architecture_notes.md  build_walkthrough.md  user_guidance.md
example/: map1.pgm  map1.yaml
qml/: MainEditor.qml  StartScreen.qml  main.qml
qml/components/: MapCanvas.qml  SidePanel.qml  StatusPanel.qml
qml/tabs/: GatesTab.qml  LayersTab.qml  MapEditTab.qml  ProjectTab.qml
src/grid_map_editor/: __init__.py  __main__.py  app.py
src/grid_map_editor/controllers/: __init__.py  map_provider.py  project_manager.py  robot_handler.py
src/grid_map_editor/resources/images/: png_2_icon.py
src/grid_map_editor/resources/qml/: MainEditor.qml  StartScreen.qml
src/grid_map_editor/resources/qml/components/: MapCanvas.qml  NavToolsPanel.qml  SidePanel.qml
src/grid_map_editor/resources/qml/tabs/: GatesTab.qml  LayersTab.qml  ProjectTab.qml
tests/: __init__.py
