[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-map-editor-py-qt"
dynamic = ["version"]
description = "An interactive occupancy grid map editor using PySide6 and ROS2"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
grid-map-editor = "grid_map_editor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "grid_map_editor.__version__"}

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
